; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_goldfish.c_goldfish_tty_do_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_goldfish.c_goldfish_tty_do_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.goldfish_tty = type { i32 }

@goldfish_ttys = common dso_local global %struct.goldfish_tty* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @goldfish_tty_do_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @goldfish_tty_do_write(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.goldfish_tty*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.goldfish_tty*, %struct.goldfish_tty** @goldfish_ttys, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.goldfish_tty, %struct.goldfish_tty* %9, i64 %11
  store %struct.goldfish_tty* %12, %struct.goldfish_tty** %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = ptrtoint i8* %13 to i64
  store i64 %14, i64* %8, align 8
  %15 = load %struct.goldfish_tty*, %struct.goldfish_tty** %7, align 8
  %16 = load i64, i64* %8, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @goldfish_tty_rw(%struct.goldfish_tty* %15, i64 %16, i32 %17, i32 1)
  ret void
}

declare dso_local i32 @goldfish_tty_rw(%struct.goldfish_tty*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
